# micro-panda-esp32

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  esp32.yaml  mpd.yaml  sdkconfig.defaults  sdkconfig.defaults.esp32c5  sdkconfig.defaults.esp32p4  sdkconfig.defaults.esp32s2  sdkconfig.defaults.esp32s3
.claude/commands/: build.md  debug.md
main/: CMakeLists.txt  Kconfig.projbuild  blink_example_main.c  esp32.c  mpd.yaml
main/src/: analog.mpd  config.mpd  digital.mpd  gpio.mpd  main.mpd  pwm.mpd  rtos.mpd
src/: adc.mpd  analog.mpd  config.mpd  gpio.mpd  i2c.mpd  main.mpd  pwm.mpd  rtos.mpd  spi.mpd  ssd1306.mpd
vscode/: settings.json
